Day 4 of bootcamp completed and did some practice with routing , blade, and middleware.

--- a/composer.json
+++ b/composer.json
@@ -59,8 +59,14 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
+        },
+    "require": {
+            "fruitcake/laravel-cors": "^2.1"
         }
+
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+
+
 }
